[gd_scene load_steps=18 format=3 uid="uid://c3vf0fdejs72s"]

[ext_resource type="Script" path="res://Scenes/StageSelect/StageDetails.gd" id="1_fk3lx"]
[ext_resource type="Texture2D" uid="uid://dc6bspeif1psv" path="res://Assets/skins/alcove/bg.png" id="2_24oak"]
[ext_resource type="Material" uid="uid://cb7nep71fmj1r" path="res://Board/TextOutline.tres" id="2_75fbn"]
[ext_resource type="FontFile" uid="uid://dqdbst8avnfuo" path="res://Assets/fonts/Lady Radical.ttf" id="3_aemx4"]
[ext_resource type="FontFile" uid="uid://7ynms6dclfsi" path="res://Assets/fonts/04B_03__.TTF" id="3_oyqtb"]
[ext_resource type="Texture2D" uid="uid://k2c3eiau7he1" path="res://Assets/sprites/button_play_stage.png" id="3_r8wad"]
[ext_resource type="Shader" path="res://Scenes/StageSelect/StageInfoBackground.gdshader" id="4_lwu6u"]
[ext_resource type="Texture2D" uid="uid://bbkyuchql3kj6" path="res://Assets/sprites/icon_power.png" id="7_26b85"]
[ext_resource type="Texture2D" uid="uid://xvf0ml1p3xk7" path="res://Assets/sprites/icon_monster.png" id="8_mxinh"]
[ext_resource type="Texture2D" uid="uid://ijvv7fnviaek" path="res://Assets/sprites/icon_size.png" id="9_xc50x"]

[sub_resource type="LabelSettings" id="LabelSettings_6fp47"]
font = ExtResource("3_aemx4")
shadow_size = 0
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a567b"]
shader = ExtResource("4_lwu6u")

[sub_resource type="LabelSettings" id="LabelSettings_2ybrx"]
font = ExtResource("3_oyqtb")
font_size = 8
font_color = Color(0.768627, 0.768627, 0.768627, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hs1wg"]
font = ExtResource("3_oyqtb")
font_size = 8
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_q84s8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureContainer/MarginContainer/MarginContainer2/MarginContainer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureContainer/MarginContainer/MarginContainer2/MarginContainer/MarginContainer:theme_override_constants/margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [24]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureContainer/MarginContainer/MarginContainer2/MarginContainer/MarginContainer/TextureRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_30c6o"]
resource_name = "hover"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureContainer/MarginContainer/MarginContainer2/MarginContainer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureContainer/MarginContainer/MarginContainer2/MarginContainer/MarginContainer:theme_override_constants/margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [24, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureContainer/MarginContainer/MarginContainer2/MarginContainer/MarginContainer/TextureRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eovnk"]
_data = {
"RESET": SubResource("Animation_q84s8"),
"hover": SubResource("Animation_30c6o")
}

[node name="StageDetails" type="HBoxContainer"]
scale = Vector2(4, 4)
script = ExtResource("1_fk3lx")

[node name="TextureContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="TextureContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="TextureContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="ColorRect" type="ColorRect" parent="TextureContainer/MarginContainer"]
layout_mode = 2
color = Color(0.756863, 0.764706, 0.752941, 1)

[node name="MarginContainer2" type="MarginContainer" parent="TextureContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="ColorRect" type="ColorRect" parent="TextureContainer/MarginContainer/MarginContainer2"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="TextureContainer/MarginContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="StageTexture" type="TextureRect" parent="TextureContainer/MarginContainer/MarginContainer2/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(58, 58)
layout_mode = 2
texture = ExtResource("2_24oak")
expand_mode = 1
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="TextureContainer/MarginContainer/MarginContainer2/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0)

[node name="MarginContainer" type="MarginContainer" parent="TextureContainer/MarginContainer/MarginContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = 24
theme_override_constants/margin_bottom = 1

[node name="TextureRect" type="TextureRect" parent="TextureContainer/MarginContainer/MarginContainer2/MarginContainer/MarginContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("3_r8wad")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = -10
theme_override_constants/margin_top = -2

[node name="NameLabel" type="Label" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
material = ExtResource("2_75fbn")
layout_mode = 2
text = "Forest"
label_settings = SubResource("LabelSettings_6fp47")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = -4
theme_override_constants/margin_top = -1

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/MarginContainer2"]
material = SubResource("ShaderMaterial_a567b")
custom_minimum_size = Vector2(108, 9)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="UnknownInfo" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer2/UnknownInfo"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer2/UnknownInfo"]
layout_mode = 2
size_flags_vertical = 1
text = "???"
label_settings = SubResource("LabelSettings_2ybrx")
vertical_alignment = 2

[node name="InfoContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer2/InfoContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer2/InfoContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("7_26b85")

[node name="Control2" type="Control" parent="VBoxContainer/MarginContainer2/InfoContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2

[node name="PowerLabel" type="Label" parent="VBoxContainer/MarginContainer2/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "1-1"
label_settings = SubResource("LabelSettings_2ybrx")
vertical_alignment = 2

[node name="Control3" type="Control" parent="VBoxContainer/MarginContainer2/InfoContainer"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/MarginContainer2/InfoContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("8_mxinh")

[node name="Control4" type="Control" parent="VBoxContainer/MarginContainer2/InfoContainer"]
custom_minimum_size = Vector2(3, 0)
layout_mode = 2

[node name="MonsterLabel" type="Label" parent="VBoxContainer/MarginContainer2/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "9"
label_settings = SubResource("LabelSettings_2ybrx")
vertical_alignment = 2

[node name="Control5" type="Control" parent="VBoxContainer/MarginContainer2/InfoContainer"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/MarginContainer2/InfoContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("9_xc50x")

[node name="Control6" type="Control" parent="VBoxContainer/MarginContainer2/InfoContainer"]
custom_minimum_size = Vector2(3, 0)
layout_mode = 2

[node name="SizeLabel" type="Label" parent="VBoxContainer/MarginContainer2/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "56"
label_settings = SubResource("LabelSettings_2ybrx")
vertical_alignment = 2

[node name="LoreLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
material = ExtResource("2_75fbn")
layout_mode = 2
text = "Play more stages to reveal this stage."
label_settings = SubResource("LabelSettings_hs1wg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eovnk")
}

[connection signal="mouse_entered" from="TextureContainer" to="." method="_on_texture_container_mouse_entered"]
[connection signal="mouse_exited" from="TextureContainer" to="." method="_on_texture_container_mouse_exited"]
